create endpoint to get circle
